Add SuperCHIP-8 executor.
scroll not working
superchip8 unit tests to be added.